# TwoMLSPQ

./: .gitignore  .taplo.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Package.resolved  Package.swift  README.md  clippy.toml  deny.toml  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml
.changeset/: a1-replier-first-sends.md  adopt-push-persistence.md  adopt-twomlspq-0-5-0.md  adopt-twomlspq-0-7-0.md  app-binding-extension.md  authenticated-a4-legs.md  bootstrap-kp-routing.md  born-dedicated-establishment.md  classical-return-kp.md  classical-scoped-forcepath.md  combiner-02-conformance.md  config.json  consolidate-swift-package.md  error-contract.md  fix-abstracttwomls-conformance.md  fix-ios-artifact-build.md  forwarded-doc-truth.md  local-session-id-app-binding.md  opaque-digest-vocabulary.md  parallel-bootstrap-envelope.md  parallel-kp-delivery.md  pensive-bootstrap-cleanup.md  pq-api-increments.md  pq-sideband-restaple.md  pre-establishment-sends.md  prepare-result-proposal-message.md  principal-state-observability.md  push-persistence.md  queued-proposal-context-crossing.md  reestablish-disposition.md  retire-reconnect-vocabulary.md  reuse-unchanged-xcframework.md  session-driven-pq-turns-and-padding.md  session-not-sendable.md  split-shim-protocols.md  staged-rotation-proposal.md  stale-frame-on-consumed-key.md  twomls-suite-enum.md  vend-abstraction-only.md
.github/workflows/: ci.yml  mermaid.yml  pages.yml  release-artifacts.yml  release.yml
Sources/AbstractTwoMLS/: AbstractTwoMLS+Client.swift  AbstractTwoMLS+PQRatchet.swift  AbstractTwoMLS+TwoMLSPQ.swift  AbstractTwoMLS.swift  SessionError+TwoMLSPQ.swift  SessionError.swift  WelcomeToken.swift  mls_rs_uniffi_ios.swift  two_mls_pq.swift
Sources/MLSrsClassic/: mls_rs_uniffi_ios.swift
Sources/TwoMLSPQ/: CoreTypes.swift  PQDigest.swift  PQRatchetTypes.swift  PQSession.swift  SessionError.swift  SessionErrorBridge.swift  two_mls_pq.swift
Sources/TwoMLSPQBinding/: two_mls_pq.swift
Tests/AbstractTwoMLSTests/: APITests.swift  AbstractTwoMLSTests.swift  CoexistenceTests.swift  ErrorContractTests.swift  MalformedFrameTests.swift  PQInvitationTests.swift  ParallelBootstrapTests.swift  PersistenceTests.swift
Tests/TwoMLSPQTests/: DigestContractTests.swift  ErrorContractTests.swift  LifecycleTests.swift  PQInvitationTests.swift  TestSupport.swift
apq/: Cargo.toml
apq/src/: archive.rs  authentication.rs  client.rs  component.rs  group.rs  lib.rs  pq_ratchet.rs  rules.rs  storage.rs
apq/tests/: provider_interop.rs  provider_spike.rs
book/: book.toml
book/src/: SUMMARY.md  api-reference.md  carried-encodings.md  cipher-suites.md  concepts.md  group-rules.md  header-encryption.md  introduction.md  protocol-flows.md  psk-binding.md  session-lifecycle.md  walkthrough.md  wire-format.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: apq_welcome_decode.rs  initial_plaintext_decode.rs  session_archive_decode.rs
rust/: .taplo.toml  deny.toml
rust/apq/: Cargo.toml
rust/apq/src/: authentication.rs  client.rs  component.rs  group.rs  pq_ratchet.rs  rules.rs  storage.rs
rust/apq/tests/: provider_interop.rs  r1_mls_assumptions.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: message_frame_decode.rs
rust/two-mls-pq/: Cargo.toml
rust/two-mls-pq/benches/: common.rs  sizes.rs
rust/two-mls-pq/src/: demo.rs  invitation.rs  key_package_store.rs  key_packages.rs  lib.rs  providers.rs  suite.rs  test_macros.rs  test_utils.rs
rust/two-mls-pq/src/session/: archive.rs  frames.rs  messaging.rs  mod.rs  pq_ops.rs  tests.rs
rust/uniffi-bindgen/: Cargo.toml
scripts/: build-dynamic-xcframework.swift  buildIos.sh  buildIos.swift  buildIosDynamic.sh  swiftTestLocal.sh
two-mls/: Cargo.toml
two-mls-pq/: Cargo.toml
two-mls-pq/benches/: common.rs  establishment.rs  kp_generation.rs  messaging.rs  sizes.rs
two-mls-pq/book/: book.toml
two-mls-pq/book/src/: SUMMARY.md  api-reference.md  benchmarks.md  cipher-suites.md  concepts.md  group-rules.md  header-encryption.md  introduction.md  planned-features.md  protocol-flows.md  psk-binding.md  session-lifecycle.md  walkthrough.md  wire-format.md
two-mls-pq/src/: combiner.rs  demo.rs  invitation.rs  key_package_store.rs  key_packages.rs  lib.rs  providers.rs  psk.rs  session.rs  suite.rs  test_macros.rs  test_utils.rs
two-mls-pq/src/session/: archive.rs  frames.rs  messaging.rs  mod.rs  pq_ops.rs  tests.rs
two-mls-pq/src/tests/: e2e.rs
two-mls/src/: key_packages.rs  lib.rs  psk.rs  session.rs
uniffi-bindgen/: Cargo.toml
