[workspace]
exclude = ["fuzz"]
members = ["apq", "two-mls-pq", "uniffi-bindgen"]
resolver = "3"

[workspace.package]
authors = ["Germ Network"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.85"

[workspace.lints.rust]
unused_imports = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

[workspace.dependencies]
mls-rs = { version = "0.55", features = ["psk", "private_message", "serde"] }
mls-rs-crypto-cryptokit = { version = "0.11", git = "https://github.com/germ-network/mls-rs", rev = "76a4ce0ef4875cfca434807fd9c1329b211ee4b5", features = [
  "post-quantum",
] }
mls-rs-crypto-rustcrypto = { version = "0.22", git = "https://github.com/germ-network/mls-rs", rev = "76a4ce0ef4875cfca434807fd9c1329b211ee4b5" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uniffi = "0.31"
zeroize = { version = "1", features = ["derive"] }

[patch.crates-io]
mls-rs = { git = "https://github.com/germ-network/mls-rs", rev = "76a4ce0ef4875cfca434807fd9c1329b211ee4b5" }
