[workspace]
exclude = ["fuzz"]
members = ["apq", "two-mls-pq", "uniffi-bindgen"]
resolver = "3"

[workspace.package]
authors = ["Germ Network"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.85"

[workspace.lints.rust]
unused_imports = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

# Size-optimized release profile: the dylib ships inside the Germ App Clip, which has a
# 15 MB uncompressed budget (physical invocations). panic=abort drops unwind tables and
# std's backtrace machinery (~0.5 MB) — a Rust panic aborts the process instead of
# surfacing as a UniFFI internal error, acceptable since clippy denies panic/unwrap/expect
# workspace-wide. strip=symbols keeps the exported (FFI + uniffi metadata) symbols.
# If benchmarks regress meaningfully, relax opt-level to "s" before anything else.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[workspace.dependencies]
mls-rs = { version = "0.55", features = [
  "psk",
  "private_message",
  "serde",
  "safe_extensions",
] }
mls-rs-core = { version = "0.27", git = "https://github.com/germ-network/mls-rs", rev = "ec69dc251db66ae6eb117079564814998bb55dec" }
mls-rs-crypto-awslc = { version = "0.25", git = "https://github.com/germ-network/mls-rs", rev = "ec69dc251db66ae6eb117079564814998bb55dec", features = [
  "post-quantum",
] }
mls-rs-crypto-cryptokit = { version = "0.11", git = "https://github.com/germ-network/mls-rs", rev = "ec69dc251db66ae6eb117079564814998bb55dec", features = [
  "post-quantum",
] }
mls-rs-crypto-traits = { version = "0.22", git = "https://github.com/germ-network/mls-rs", rev = "ec69dc251db66ae6eb117079564814998bb55dec" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
uniffi = "0.31"
zeroize = { version = "1", features = ["derive"] }

[patch.crates-io]
mls-rs = { git = "https://github.com/germ-network/mls-rs", rev = "ec69dc251db66ae6eb117079564814998bb55dec" }
