[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "apq"
publish.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
# Exposes measurement fixtures (e.g. full PQ updatePath commit size) for benchmarks only;
# never enabled in production. Combine with `cryptokit` for real ML-KEM numbers.
benchmark_util = []
cryptokit = ["dep:mls-rs-crypto-cryptokit", "dep:mls-rs-crypto-traits"]
default = ["rustcrypto"]
rustcrypto = []

[dependencies]
mls-rs = { workspace = true }
mls-rs-crypto-cryptokit = { workspace = true, optional = true }
mls-rs-crypto-rustcrypto = { workspace = true }
mls-rs-crypto-traits = { version = "0.22", git = "https://github.com/germ-network/mls-rs", rev = "3743c75d32257ab48bde2875f5e8d624410147e9", optional = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
