[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "apq"
publish.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
# Exposes measurement fixtures (e.g. full PQ updatePath commit size) for benchmarks only;
# never enabled in production. Combine with `cryptokit` for real ML-KEM numbers.
benchmark_util = []
cryptokit = ["dep:mls-rs-crypto-cryptokit", "dep:mls-rs-crypto-traits"]
default = ["rustcrypto"]
rustcrypto = []

[dependencies]
mls-rs = { workspace = true }
mls-rs-core = { workspace = true }
mls-rs-crypto-cryptokit = { workspace = true, optional = true }
mls-rs-crypto-rustcrypto = { workspace = true }
mls-rs-crypto-traits = { workspace = true, optional = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
# Phase 0 spike (provider-agnostic plan): prove aws-lc serves both halves — ML-KEM-768
# (0xFDEA) for the PQ group and CURVE25519_CHACHA for the classical group — and that it
# interops with CryptoKit. See tests/provider_spike.rs.
mls-rs-crypto-awslc = { workspace = true }
mls-rs-crypto-traits = { workspace = true }
