[lib]
bench = false
crate-type = ["cdylib", "staticlib", "rlib"]

[package]
authors.workspace = true
autobenches = false
edition.workspace = true
license.workspace = true
name = "two-mls-pq"
publish.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
# Exposes bench fixtures and gates the `benches/*` targets; combine with `cryptokit`
# for real ML-KEM-768 numbers.
benchmark_util = ["apq/benchmark_util"]
# NOTE(Phase 1 of the provider-agnostic refactor): apq no longer has provider features;
# these entries only keep the workspace feature graph resolvable until Phase 2 rewires
# this crate onto the generic apq API (features become: cryptokit | awslc, no default).
cryptokit = ["dep:mls-rs-crypto-cryptokit"]
default = ["rustcrypto"]
rustcrypto = []

[dependencies]
apq = { path = "../apq", version = "0.1.0", default-features = false }
mls-rs = { workspace = true }
mls-rs-crypto-cryptokit = { workspace = true, optional = true }
mls-rs-crypto-rustcrypto = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
  "html_reports",
  "plotters",
] }

[[bench]]
harness = false
name = "kp_generation"
required-features = ["benchmark_util"]

[[bench]]
harness = false
name = "establishment"
required-features = ["benchmark_util"]

[[bench]]
harness = false
name = "messaging"
required-features = ["benchmark_util"]

[[bench]]
harness = false
name = "sizes"
required-features = ["benchmark_util"]
