[lib]
crate-type = ["cdylib", "staticlib"]

[package]
name = "two-mls"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["rustcrypto"]
rustcrypto = []
cryptokit = []
test-utils = []

[dependencies]
mls-rs = { workspace = true }
uniffi = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
