[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "apq"
publish.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
# Exposes measurement fixtures (e.g. full PQ updatePath commit size) for benchmarks only;
# never enabled in production.
benchmark_util = []

# Crypto-provider agnostic: apq depends only on trait crates. Concrete providers (CryptoKit,
# aws-lc, …) are injected by the consumer as generic parameters — see `CryptoConfig`.
[dependencies]
mls-rs = { workspace = true }
# `post-quantum` exposes the named PQ cipher-suite constants (e.g. `CipherSuite::ML_KEM_768`)
# — metadata only, no crypto — so the suite classifier and the construction-time drift guard
# can reference them instead of raw literals.
mls-rs-core = { workspace = true, features = ["post-quantum"] }
mls-rs-crypto-traits = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
# aws-lc backs apq's own tests on every platform: it covers both halves (classical suites
# and ML-KEM-768) and is portable, so the test suite is identical on Linux and macOS.
mls-rs-crypto-awslc = { workspace = true }

# CryptoKit is Apple-only; used exclusively by the cross-provider interop tests.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
mls-rs-crypto-cryptokit = { workspace = true }
