[package]
edition = "2021"
name = "two-mls-pq-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

# Standalone workspace: cargo-fuzz builds this crate with sanitizer flags out-of-band, so it is
# excluded from the parent workspace (see ../Cargo.toml `exclude`). Because it is its own workspace
# root it does not inherit the parent's [patch.crates-io], so the mls-rs fork pin is mirrored below.
[workspace]

[dependencies]
apq = { path = "../apq", default-features = false }
libfuzzer-sys = "0.4"
# aws-lc: the portable provider, so fuzzing runs off-Apple (mirrors CI's ubuntu leg).
two-mls-pq = { path = "../two-mls-pq", default-features = false, features = ["awslc"] }

[patch.crates-io]
mls-rs = { git = "https://github.com/germ-network/mls-rs", rev = "ec69dc251db66ae6eb117079564814998bb55dec" }

[[bin]]
bench = false
doc = false
name = "apq_welcome_decode"
path = "fuzz_targets/apq_welcome_decode.rs"
test = false

[[bin]]
bench = false
doc = false
name = "session_archive_decode"
path = "fuzz_targets/session_archive_decode.rs"
test = false

[[bin]]
bench = false
doc = false
name = "message_frame_decode"
path = "fuzz_targets/message_frame_decode.rs"
test = false

[[bin]]
bench = false
doc = false
name = "initial_plaintext_decode"
path = "fuzz_targets/initial_plaintext_decode.rs"
test = false
