[lib]
bench = false
crate-type = ["cdylib", "staticlib", "rlib"]

[package]
# NOT independently versioned. `publish` inherits the workspace's `false`, so this crate
# never reaches crates.io and `version` below is inert — it has stayed 0.1.0 while the
# shipping product moved well past it. The release version lives in the repo's
# package.json / git tag (changesets), and names the SWIFT PACKAGE, which is the only
# consumable artifact: one tag pins one (Swift API, Rust binary) pair, via the xcframework
# url + checksum written into Package.swift at release time.
#
# The Rust half's own compatibility axis is `BINDING_CONTRACT_VERSION` (see lib.rs), not
# this field — it versions the Rust<->Swift ABI and is enforced at runtime by the canary in
# PQSession.swift. Deliberately NOT a second changesets package: the two ship as one
# artifact and cannot be mixed, so a second version stream could only ever disagree with
# the contract check.
authors.workspace = true
autobenches = false
edition.workspace = true
license.workspace = true
name = "two-mls-pq"
publish.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
# Exposes bench fixtures and gates the `benches/*` targets; combine with `cryptokit`
# for real ML-KEM-768 numbers.
benchmark_util = ["apq/benchmark_util"]
# Exactly one crypto-provider family backs a build (see src/providers.rs); no default —
# consumers and CI pick explicitly. cryptokit wins if both are enabled (--all-features
# on an Apple dev machine).
awslc = ["dep:mls-rs-crypto-awslc"]
cryptokit = ["dep:mls-rs-crypto-cryptokit"]

[dependencies]
apq = { path = "../apq", version = "0.1.0", default-features = false }
mls-rs = { workspace = true }
mls-rs-crypto-awslc = { workspace = true, optional = true }
mls-rs-crypto-cryptokit = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
  "html_reports",
  "plotters",
] }

[[bench]]
harness = false
name = "kp_generation"
required-features = ["benchmark_util"]

[[bench]]
harness = false
name = "establishment"
required-features = ["benchmark_util"]

[[bench]]
harness = false
name = "messaging"
required-features = ["benchmark_util"]

[[bench]]
harness = false
name = "sizes"
required-features = ["benchmark_util"]
