[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "uniffi-bindgen"
publish.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
